# midnote

./: .rustfmt.toml  Cargo.toml  Cross.toml  Dockerfile  LICENSE  entrypoint.sh  readme.md
.cargo/: config
.github/: checks.yml
.github/actions/: main-action
.github/chglog/: release.yml
.github/workflows/: checks.yml  main.yml  release.yml
src/: app.rs  bar.rs  config.rs  init.rs  lib.rs  main.rs  note.rs  player.rs
src/init/: helpers.rs  meta_events.rs
