[package]
name = "midnote"
description = "A terminal application for viewing notes in a MIDI track, with audio."
version = "0.10.4"
edition = "2018"
license = "MIT"
authors = ["Taylan Gökkaya <insomnimus.dev@gmail.com>"]
repository = "https://github.com/insomnimus/midnote"
categories = ["accessibility", "multimedia::audio", "multimedia::encoding"]
keywords = ["midi", "music", "smf", "accessibility"]

[dependencies]
clap = {version = "3.0.0-rc.7", features = ["cargo", "unicode", "wrap_help"] }
crossterm = { version = "0.22.1", features = ["serde"] }
midir = "0.7.0"
midly = "0.5.2"
nodi = { version = "0.13.2", optional = true, features = ["hybrid-sleep"] }
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"

[features]
default = ["nodi"]
jack = ["nodi/jack"]
winrt = ["nodi/winrt"]
