[package]
name = "midnote"
description = "A terminal application for viewing notes in a MIDI track, with audio."
version = "0.11.1"
edition = "2018"
license = "MIT"
authors = ["Taylan Gökkaya <insomnimus.dev@gmail.com>"]
repository = "https://github.com/insomnimus/midnote"
categories = ["accessibility", "multimedia::audio", "multimedia::encoding"]
keywords = ["midi", "music", "smf", "accessibility"]

[dependencies]
clap = { version = "3.1.18", features = ["cargo", "unicode", "wrap_help"] }
crossterm = { version = "0.23.2", features = ["serde"] }
midir = "0.8.0"
midly = "0.5.2"
nodi = { version = "0.15.2", optional = true, features = ["hybrid-sleep"] }
serde = { version = "1.0.137", features = ["derive"] }
serde_json = "1.0.81"

[features]
default = ["nodi"]
jack = ["nodi/jack"]
winrt = ["nodi/winrt"]
